--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "privacy": "unlisted",
     "sdkVersion": "34.0.0",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "landscape",
     "ios": {
       "bundleIdentifier": "com.kwa.tattools"
     },
