--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-unimodules": "~0.5.2",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.10"
   },
