--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babylonjs/gui": "^4.2.0",
     "expo": "^34.0.1",
     "expo-asset-utils": "^1.2.0",
     "expo-font": "^8.4.0",
