--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,4 +32,6 @@ target 'TattoolsApp' do
   use_unimodules!
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
 end
