--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-reanimated')
     implementation project(':react-native-gesture-handler')
@@ -159,6 +160,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 // react-native-vector-icons
 project.ext.vectoricons = [
+    iconFontsDir: "../../assets/fonts",
     iconFontNames: [ 'FontAwesome.ttf'] // Name of the font files you want to copy
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
