--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.59.10",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-unimodules": "~0.5.2",
